--- a/07week/adressBook/adressbook.css
+++ b/07week/adressBook/adressbook.css
@@ -3,6 +3,10 @@ body{
   display: flex;
   justify-content: center;
 }
+li{
+  display: flex;
+  flex-direction: column;
+}
 
 section{
   height: 90vh;
