--- a/08week/appIdea/app.css
+++ b/08week/appIdea/app.css
@@ -2,21 +2,31 @@ section{
  background-image: url(https://troyautocare.com/wp-content/uploads/2019/06/oil-change-500pxH.jpg);
  height: 60vh;
  width: 48%;
- display: flex;
- flex-direction: row;
- align-items: baseline;
- justify-content: center;
+ border-radius: 5%;
+}
+div{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: center;
+ 
 }
 body{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.575);
 }
 h1{
   color: white;
 }
-h3{
+h2{
   color: white;
+}
+h4{
+  color: white;
+}
+p{
+  margin: 30px;
 }
